--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body{
     min-height: 100px;
     justify-content: space-between;
     align-items: center;
-    padding: 19px;
+    padding: 1.9rem;
 }
 .headerimg_1logo{
     max-height: inherit;
