--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ form.example::after {
     min-height: 100px;
     justify-content: space-between;
     align-items: center;
-    padding: 3rem;
+    padding: 2.9rem;
 }
 .headerimg_1logo{
     max-height: inherit;
@@ -137,7 +137,7 @@ width: 30rem;
     display: flex;
     align-items: baseline;
     padding: 1.4rem 1.4rem 1.4rem .4rem;
-    color:transparent;
+    color:white;
     font-size: 1.4rem;
     font-weight: 700;
     letter-spacing: .05rem;
@@ -189,7 +189,7 @@ position: relative;
   .store__header-wrapper .header-menu .ui-menu > li + li {
     border-image-width: .1rem 0 0 auto;
     border-image-repeat: repeat;
-    border-width: .1rem 0 0;
+    border-width: 0;
     border-style: solid;
   }
 }
@@ -374,4 +374,68 @@ margin-bottom: 2rem;
 .label_style{
   margin-left: 0rem;
   width: 15rem;
+}
+@media (min-width: 5rem), print {
+  .page-footer {
+    background: #000000;
+    margin-top: 0rem;
+    padding-bottom: 1rem;
+  }
+}
+.footer__top .ui-menu a {
+  display: inline-flex;
+  padding: .4rem 0;
+  color: #dae0e2;
+  font-size: 1.4rem;
+  font-weight: 300;
+  line-height: 1.7142;
+  text-decoration: none;
+}
+.footer__top .ui-menu a {
+  color: #dae0e2;
+  font-size: 1.4rem;
+  font-weight: 300;
+  line-height: 1.7142;
+}
+.footer__top {
+  display: flex;
+  flex-flow: row wrap;
+}
+.footer__top__main {
+  flex: 0 1 auto;
+  width: 100%;
+  min-width: 0;
+  padding: 0 .8rem;
+}
+@media (min-width: 880px), print {
+  .page-wrapper .page-footer .footer.content {
+    padding-top: 7.2rem;
+    padding-bottom: 5.6rem;
+  }
+}
+.page-wrapper .page-footer {
+  margin-top: 0;
+  padding-bottom: 0;
+  
+}
+.footer__top h3 {
+  margin-bottom: 1.6rem;
+  color: #ffffff;
+  font-size: 1.5rem;
+  font-weight: 400;
+  line-height: 1;
+  text-transform: uppercase;
+  margin-left: 7rem;
+}
+
+.footer__top {
+  display:flex;
+  flex-flow:row wrap;
+  margin:0 -.8rem 4rem
+}
+.footer__top__main {
+  flex:0 1 auto;
+  width:100%;
+  min-width:0;
+  padding:0 .8rem
 }
