--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,18 @@
 *{
-    padding: 0%;
-    margin: 0%;
-    box-sizing: border-box;
+padding: 0%;
+  margin: 0%;
+   box-sizing: border-box;
     font-family: DINPro-bold;
 
 }
 
 body{
-    font-size: 20px;
+    font-size: 2rem;
     font-family: DINPro-bold;
     line-height: 1.5;
   background-color: white;
   color: black;
-  font-size: 25px;
+    overflow-x: hidden;
 }
 
 form.example input[type=text] {
