--- a/css/style2.css
+++ b/css/style2.css
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: DINPro-bold;
   background: radial-gradient(circle, rgb(241, 229, 234) 0%, rgb(220, 227, 242) 100%);
 }
 
@@ -40,7 +40,6 @@ body {
   padding: 5rem;
   margin-bottom: -12rem;
   font-size: 3rem;
-
   margin-left: 32rem;
 }
 .text_huren{
@@ -87,9 +86,10 @@ padding: 6rem;
   height: 47rem;
   margin-top: 10rem;
   border-radius: 2rem;
+
 }
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 100rem;
   position: relative;
   margin: auto;
 }
