--- a/css/style3.css
+++ b/css/style3.css
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: DINPro-bold;
   background: radial-gradient(circle, rgb(241, 229, 234) 0%, rgb(220, 227, 242) 100%);
 }
 
@@ -52,6 +52,7 @@ body {
   margin-top: 1rem;
   vertical-align: middle;
   width: 100%;
+    border-radius: 1rem;
 }
 
 /* Responsive layout - makes a two column-layout instead of four columns */
@@ -69,7 +70,76 @@ body {
     max-width: 100%;
   }
 }
-.h2_tekst{
-  margin-top: 15rem;
-  width: 10rem;
+.titel_huren{
+  display: flex;
+  padding: 5rem;
+  margin-bottom: -12rem;
+  font-size: 3rem;
+  justify-content: center;
+}
+.text_huren{
+  flex-grow: 1;
+  display: flex;
+  padding: 5rem;
+  justify-content: center;
+  align-content: center;
+  margin-top: 5rem;
+  font-size: 1.8rem;
+  flex-shrink: 1;
+  max-width: 50ch;
+}
+.info{
+padding: 5rem;
+  display: flex;
+  gap:  26rem;
+  justify-content: center;
+}
+img:hover {
+  animation: shake 0.5s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+  0% { transform: translate(0.0625rem, 0.0625rem) rotate(0deg); }
+  10% { transform: translate(-0.0625rem, -0.125rem) rotate(-1deg); }
+  20% { transform: translate(-0.1875rem, 0rem) rotate(1deg); }
+  30% { transform: translate(0.1875rem, 0.125rem) rotate(0deg); }
+  40% { transform: translate(0.0625rem, -0.0625rem) rotate(1deg); }
+  50% { transform: translate(-0.0625rem, 0.125rem) rotate(-1deg); }
+  60% { transform: translate(-0.1875rem, 0.0625rem) rotate(0deg); }
+  70% { transform: translate(0.1875rem, 0.0625rem) rotate(-1deg); }
+  80% { transform: translate(-0.0625rem, -0.0625rem) rotate(1deg); }
+  90% { transform: translate(0.0625rem, 0.125rem) rotate(0deg); }
+  100% { transform: translate(0.0625rem, -0.125rem) rotate(-1deg); }
+}
+.collapsible {
+background-color: #000000;
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 76%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 1.5rem;
+  margin-left: 15rem;
+}
+
+.active, .collapsible:hover {
+  background-color: #000000;
+}
+
+.content {
+  padding:2rem;
+  display: none;
+  overflow: hidden;
+  background-color: transparent;
+  font-size: 1.5rem;
+  max-width: 102ch;
+  margin-left: 21rem;
+}
+.text_h2{
+  margin-left: 15rem;
+  font-size: 2rem;
+  margin-bottom: 1rem;
 }
