--- a/css/style4.css
+++ b/css/style4.css
@@ -81,3 +81,21 @@ padding: 5rem;
   margin-right: 1.6rem;
   border-radius: 1rem;
 }
+img:hover {
+  animation: shake 0.5s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+  0% { transform: translate(0.0625rem, 0.0625rem) rotate(0deg); }
+  10% { transform: translate(-0.0625rem, -0.125rem) rotate(-1deg); }
+  20% { transform: translate(-0.1875rem, 0rem) rotate(1deg); }
+  30% { transform: translate(0.1875rem, 0.125rem) rotate(0deg); }
+  40% { transform: translate(0.0625rem, -0.0625rem) rotate(1deg); }
+  50% { transform: translate(-0.0625rem, 0.125rem) rotate(-1deg); }
+  60% { transform: translate(-0.1875rem, 0.0625rem) rotate(0deg); }
+  70% { transform: translate(0.1875rem, 0.0625rem) rotate(-1deg); }
+  80% { transform: translate(-0.0625rem, -0.0625rem) rotate(1deg); }
+  90% { transform: translate(0.0625rem, 0.125rem) rotate(0deg); }
+  100% { transform: translate(0.0625rem, -0.125rem) rotate(-1deg); }
+}
