--- a/css/style1.css
+++ b/css/style1.css
@@ -193,3 +193,15 @@ display: flex;
 .checked {
   color: orange;
 }
+.read-more-btn{
+  background: transparent;
+  border-radius: 1rem;
+  border: 0.15rem solid black;
+  cursor: pointer;
+  font-size: 1.4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.4rem;
+  margin-bottom: 1rem;
+}
