--- a/css/style.css
+++ b/css/style.css
@@ -135,9 +135,9 @@ width: 30rem;
 }
 .menu-main-ul{
     display: flex;
+    list-style: none;
     align-items: baseline;
     padding: 1.4rem 1.4rem 1.4rem .4rem;
-    color:white;
     font-size: 1.4rem;
     font-weight: 700;
     letter-spacing: .05rem;
@@ -196,7 +196,6 @@ position: relative;
 @media (min-width: 880px), print {
   .store__header-wrapper .header-menu .ui-menu > li {
     margin-bottom: 0;
-    background: white;
   }
 }
 
