--- a/css/style6.css
+++ b/css/style6.css
@@ -48,4 +48,44 @@ body {
   border-radius: 50%;
   font-weight: bold;
 }
-.
+.verwijder-button{
+  width: 16rem;
+  height: 4.5rem;
+  border-radius: 1rem;
+  background: transparent;
+  border: 0.15rem solid black;
+  cursor: pointer;
+  font-size: 1.4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.7rem;
+  transition: background 0.3s, color 0.3s;
+}
+.lekker_stylen_winkellijst{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.lekker_stylen_winkellijst img{
+  border-radius: 7.2rem;
+  min-width: none;width: 30rem;
+  gap: 3rem;
+  justify-content: center;
+  align-items: flex-start;
+     flex-shrink: 0;
+   display: flex;
+   flex-direction: column;
+   cursor: pointer;
+   padding: 1rem;
+    text-decoration: underline;
+    border: 0.1rem solid black;
+    margin-top: 5rem;
+    margin-left: 1rem;
+}
+.leeg{
+  width: 25rem;
+  display: flex;
+  margin-top: 3rem;
+  
+}
